add: Execute the read tool [skip ci]